# frankenfrank

./: .gitignore  pyproject.toml  requirements.txt
code/: .python-version  analyze.py  brief.py  convert_dialogues.py  convert_dialogues_test.py  drop_a_as.py  find_unknown_words.py  parse.py  parse_test.py  print_unique_words.py  run_tests.py  text_utils.py  trie.py  trie_test.py  tts.py  viewer.html
dialogues/: 1_with_audio.yml  2.yaml  3.original.yaml  3.yaml  4.yaml  5.bak.yaml  5.yaml  Chinese_Every_Day.txt  dialogues.yaml  frank-rehash-1.json  index.yaml  original-frank-new.json  original-frank.json  original-frank.yaml  scratch.json
docs/: dialogues2.yaml
frankstats/: p1-2.txt  p1-3.txt  p1-4.txt  p1-5.txt  p1-6.txt  p1.txt
gptout/: 1.json  2.json
output/: 1_with_audio.yaml
prompts/: .#add-playback-support.md  add-playback-support.md  dialog-format-refactor.md  make-dialogues-frank-rehash-from-word-list.md  make-dialogues-frank-rehash.md  make-dialogues-original-frank.md  makedialogues-only.md  makedialogues.md  toolprompt.md  ttsprompt.md
words/: 100.txt  10K.txt  10k-expl.txt  500.txt
www/: assets  dialogues  dialogues.yaml  index.html  index.yaml  script.js  server.py  styles.css
